--- a/src/2-form.html
+++ b/src/2-form.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form</title>
-    <link href="../css/2-form.css" rel="stylesheet">
+    <link href="./css/2-form.css" rel="stylesheet">
 
 </head>
 
 <body>
     <a href="./index.html">Go back</a>
 
-    <script src="../js/2-form.js" type="module" defer></script>
+    <script src="./2-form.html" type="module" defer></script>
 </body>
 
 </html>
