--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -11,7 +11,7 @@
 
 <body>
     <a href="./index.html">Go back</a>
-
+    <ul class="gallery"></ul>
     <script src="./js/1-gallery.js" type="module" defer></script>
 </body>
 
