--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vanilla App Template</title>
+  <title>Homework 9</title>
   <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
@@ -14,6 +14,8 @@
   <a href="./1-gallery.html">1-gallery</a>
 
   <a href="./2-form.html">2-form</a>
+
+  <script type="module" src="./main.js"></script>
 </body>
 
 </html>
