--- a/src/2-form.html
+++ b/src/2-form.html
@@ -12,7 +12,19 @@
 <body>
     <a href="./index.html">Go back</a>
 
-    <script src="./2-form.html" type="module" defer></script>
+    <form class="feedback-form" autocomplete="off">
+        <label>
+            Email
+            <input type="email" name="email" autofocus />
+        </label>
+        <label>
+            Message
+            <textarea name="message" rows="8"></textarea>
+        </label>
+        <button type="submit">Submit</button>
+    </form>
+
+    <script src="./js/2-form.js" type="module" defer></script>
 </body>
 
 </html>
